# lectboard-server-rust

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: script.js  style.css
templates/: index.hbs
