[package]
name = "lectboard-server-rust"
version = "0.1.0"
authors = ["denbergvanthijs <denbergvanthijs@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
image = "0.23.13"
rocket_contrib = { version = "0.4.7", features = ["handlebars_templates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local_ipaddress = "0.1.3"